test/golden96/{helloCL=100}.9444838110946424370.golden
INITIALPATH:7:22: error: [GHC-64725]
    • String type is incompatible with inside padding (=).
    • In the first argument of ‘putStrLn’, namely ‘(formatAny Minus (PaddingK (100 :: Int) (Just (Nothing, AlignInside))) Nothing (Nothing :: Maybe Int) hello)’
      In the expression: putStrLn (formatAny Minus (PaddingK (100 :: Int) (Just (Nothing, AlignInside))) Nothing (Nothing :: Maybe Int) hello)
      In an equation for ‘main’: main = putStrLn (formatAny Minus (PaddingK (100 :: Int) (Just (Nothing, AlignInside))) Nothing (Nothing :: Maybe Int) hello)
  |
7 | main = putStrLn [fmt|{hello:=100}|]
  |                      ^^^^^^^^^^^^^^